<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeItem"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="Home" />
    <item
        android:id="@+id/gameDetailsItem"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="Details" />
</menu>